[metadata]
name = dug
version = attr: dug.__version__
author = Renaissance Computing Institute
author_email = schreepc@renci.org
description = Digging up data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helxplatform/dug
project_urls =
    Bug Tracker = https://github.com/helxplatform/dug/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = true
install_requires =
    elasticsearch>=7.0.0,<8.0.0
    pluggy
    requests
    requests_cache
    redis>=3.0.0

[options.entry_points]
console_scripts =
    dug = dug.cli:main

[options.extras_require]
rest =
    Flask
    flask_cors
    flask_restful
    flasgger
    gunicorn
    jsonschema

[options.packages.find]
where = src